--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,94 @@
+body {
+  background-image: url("https://i1.wp.com/www.theandroidsoul.com/wp-content/uploads/2020/04/www.theandroidsoul.com-frozen-backgrounds-3.jpg?fit=1920%2C1080&ssl=1");
+  background-color: rgba(0, 0, 0, .6);
+  background-size: cover;
+  background-blend-mode: overlay;
+}
+
+h1 {
+  font-family: 'Ubuntu', sans-serif;
+  background-color: rgba(0, 0, 0, .6);
+  color: white;
+  opacity: 0.7;
+  padding: 10px 0;
+  width: 30%;
+  margin: 0 auto;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+button {
+  background-color: rgb(208, 53, 223);
+  color: white;
+  border: none;
+  padding: 10px 0px;
+  margin-top: 10px;
+  width: 250px;
+}
+
+button[disabled] {
+  background-color: purple;
+  color: black;
+  cursor: none;
+  pointer-events: none;
+  opacity: 0.8;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: rgb(71, 30, 71);
+  transition: background-color 0.3s ease;
+}
+
+input {
+  width: 250px;
+  background-color: rgba(0, 0, 0, .6);
+  padding: 10px 0px;
+  color: white;
+  margin-top: 20px;
+  opacity: 0.8;
+}
+
+input:hover {
+  background-color: rgba(0, 0, 0, .8);
+  transition: ease-out;
+}
+
+input:focus {
+  opacity: 1;
+}
+
 .App {
   text-align: center;
+  margin: 0 auto;
+}
+
+.far {
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.todo {
+  color: white;
+  background-color: rgba(0, 0, 0, .6);
+  font-family: 'Balsamiq Sans', cursive;
+  height: 40px;
+  border-bottom: 1px solid lightgrey;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+  padding: 0 20px;
+  align-items: center;
+}
+
+.far:hover {
+  color: purple;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,6 +110,19 @@
 
 .App-link {
   color: #61dafb;
+}
+
+::-webkit-scrollbar {
+  width: 0.8em;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px blue;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(52, 164, 216);
+  outline: 1px solid slategrey;
 }
 
 @keyframes App-logo-spin {
